# ai-sdd-bootstrap

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  README_zh.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
ai_sdd_bootstrap/: __init__.py  __main__.py  cli.py  commands.py  core.py
ai_sdd_bootstrap/templates/: ADR.example.md  ADR.md  AGENTS.md  AGENTS.mvp.md  INDEX.md  README.md  README.mvp.md  ai-behavior.md  harness-eval-py.py  harness-go.go  harness-scenario-py.py  harness-shell.sh  project-meta.md
scripts/: ai_sdd_bootstrap.py
scripts/templates/: .gitignore  AI_HANDOFF.md  CLAUDE.md  feature-spec.example.md  feature-spec.md  harness-go.go  harness-py.py  harness-rs.rs  harness-shell.sh  harness-ts.ts
tests/: __init__.py  test_ai_sdd_bootstrap.py
